20061027
- (djm) [auth.c] gc some dead code

20061023
 - (djm) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2006/09/30 17:48:22
     [sftp.c]
     Clear errno before calling the strtol functions.
     From Paul Stoeber <x0001 at x dot de1 dot cc>.
     OK deraadt@.
   - djm@cvs.openbsd.org 2006/10/06 02:29:19
     [ssh-agent.c ssh-keyscan.c ssh.c]
     sys/resource.h needs sys/time.h; prompted by brad@
     (NB. Id sync only for portable)
   - djm@cvs.openbsd.org 2006/10/09 23:36:11
     [session.c]
     xmalloc -> xcalloc that was missed previously, from portable
     (NB. Id sync only for portable, obviously)
   - markus@cvs.openbsd.org 2006/10/10 10:12:45
     [sshconnect.c]
     sleep before retrying (not after) since sleep changes errno; fixes
     pr 5250; rad@twig.com; ok dtucker djm
   - markus@cvs.openbsd.org 2006/10/11 12:38:03
     [clientloop.c serverloop.c]
     exit instead of doing a blocking tcp send if we detect a client/server
     timeout, since the tcp sendqueue might be already full (of alive
     requests); ok dtucker, report mpf
   - djm@cvs.openbsd.org 2006/10/22 02:25:50
     [sftp-client.c]
     cancel progress meter when upload write fails; ok deraadt@
 - (tim) [Makefile.in scard/Makefile.in] Add datarootdir= lines to keep
   autoconf 2.60 from complaining.

20061018
 - (dtucker) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2006/09/25 04:55:38
     [ssh-keyscan.1 ssh.1]
     Change "a SSH" to "an SSH".  Hurray, I'm not the only one who
     pronounces "SSH" as "ess-ess-aich".
     OK jmc@ and stevesk@.
 - (dtucker) [sshd.c] Reshuffle storing of pw struct; prevents warnings
   on older versions of OS X.  ok djm@

20061016
 - (dtucker) [monitor_fdpass.c] Include sys/in.h, required for cmsg macros
   on older (2.0) Linuxes.  Based on patch from thmo-13 at gmx de.

20061006
 - (tim) [buildpkg.sh.in] Use uname -r instead of -v in OS_VER for Solaris.
   Differentiate between OpenServer 5 and OpenServer 6